correct alignment on grid

--- a/assets/css/looting.less
+++ b/assets/css/looting.less
@@ -595,7 +595,7 @@ article.post {
       }
 
       .subtitle {
-        margin-top:    percentage(@padding - (@padding / 4));
+        margin-top:    1.5%;
         font-size:     @baseFontSize * 1.1;
       }
     }
